--- a/pwa/package.json
+++ b/pwa/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@unocss/preset-mini": "^0.45.29",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vitejs/plugin-vue": "^3.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
