--- a/App/package.json
+++ b/App/package.json
@@ -13,13 +13,14 @@
     "@react-navigation/native-stack": "^6.9.7",
     "@react-navigation/stack": "^6.3.10",
     "expo": "^47.0.0",
+    "expo-local-authentication": "~13.0.2",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "expo-local-authentication": "~13.0.2"
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
