--- a/pwa/package.json
+++ b/pwa/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.0",
+    "@headlessui/vue": "^1.7.7",
     "@types/mapbox__mapbox-gl-geocoder": "^4.7.3",
     "@types/mapbox-gl": "^2.7.6",
     "@unocss/reset": "^0.45.21",
